{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 20,
  "lineage": "b2bb335a-0cf3-10a9-d6b7-40d5a58d4700",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:438336773404:security-group/sg-03afe280703d2b7b8",
            "description": "Ingress 5432 from ECS tasks SG only",
            "egress": [],
            "id": "sg-03afe280703d2b7b8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ECS_tasks_to_RDS_5432",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0afffcf8d04818381"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "papyrus-rds-sg",
            "name_prefix": "",
            "owner_id": "438336773404",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Owner": "self",
              "Project": "papyrus"
            },
            "tags_all": {
              "Env": "dev",
              "Owner": "self",
              "Project": "papyrus"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fbda65c351254bb3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "438336773404",
            "id": "sg-03afe280703d2b7b8",
            "region": "us-west-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "from_tasks_5432",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:438336773404:security-group-rule/sgr-0cf1be2d3ddbcca5a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "ECS_tasks_to_RDS_5432",
            "from_port": 5432,
            "id": "sgr-0cf1be2d3ddbcca5a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0afffcf8d04818381",
            "region": "us-west-2",
            "security_group_id": "sg-03afe280703d2b7b8",
            "security_group_rule_id": "sgr-0cf1be2d3ddbcca5a",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "438336773404",
            "id": "sgr-0cf1be2d3ddbcca5a",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.rds"
          ]
        }
      ]
    }
  ]
}